--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,6 +29,10 @@ jobs:
       - name: Run Docker container with volume
         run: docker run --rm -v ${{ github.workspace }}/output:/app/output audioreach-build
 
+      - name: List contents of output directory
+        run: ls -la ./output
+
+
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
